<resources>
    <string name="app_name">MySDU</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>

    <string name="nav_item_home">Time Table</string>
    <string name="nav_item_hw">Home work</string>
    <string name="nav_item_messages">Message</string>
    <string name="nav_item_grades">Grades</string>
    <string name="nav_item_logout">Logout</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_hw</item>
        <item>@string/nav_item_grades</item>
        <item>@string/nav_item_messages</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home Work</string>
    <string name="title_timetable">TimeTable</string>
    <string name="title_login">Login</string>
    <string name="title_grades">Grades</string>

</resources>