<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weekday"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="WEDNESDAY"

        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addbtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="16dp"
        android:scaleType="center"
        android:src="@drawable/ic_action_add"
        app:backgroundTint="@color/colorPrimaryDark"
        app:borderWidth="0dp"
        app:elevation="4sp" />

</android.support.design.widget.CoordinatorLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mo"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:height="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/monday"
            android:textColor="#999"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tu"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:height="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tuesday"
            android:textColor="#999"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/we"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:height="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/wednesday"
            android:textColor="#999"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/th"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:height="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/thursday"
            android:textColor="#999"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:height="50dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/friday"
            android:textColor="#999"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>